# iuu-fishing-detection

./: .env.example  .gitignore  CHANGELOG.md  DATA_COMPLETENESS_REPORT.md  README.md  pull_sar_data.py  pull_sar_data_v2.py  pyproject.toml  requirements.txt
archive/: pull_sar_data.py  pull_sar_data_v3.py  pull_sar_data_yearly.py
data/processed/: feature_scaler.pkl
data/processed/model/: class_weights.npy  encoders.pkl  feature_names.json  mmsi_index.json  node_features.npy  node_labels.npy  test_results.json  training_log.json  vessel_class_embed.npy  vessel_class_indices.npy  (+2 more)
docs/: AUDIT_REPORT.md  DATA_PIPELINE_IMPLEMENTATION_PLAN.md  DATA_QUALITY_REPORT.md  DATA_SOURCES.md  PHASE1-RESEARCH-PLAN.md  PHASE1_AUDIT_FINDINGS.md  PIPELINE_SCHEMA.md  TECHNICAL_DEFENSE.md
notebooks/: 00_server_setup.ipynb
scripts/: download_large_data.sh  pull_sar_data.py  run_pipeline.py  setup_env.sh  train.py
src/: __init__.py  bmkg_weather_data.py  bps_data.py  generate_synthetic_ais.py  gfw_api_setup.py  mpa_data_setup.py  viirs_data_setup.py
src/data/: __init__.py  bps_client.py  constants.py  loaders.py  loaders_aux.py  loaders_sar_effort.py  mpa_setup.py  step_2_1_dedup.py  step_2_2_clean.py  step_2_7_clean_rest.py  step_3_1_vessel_features.py  step_3_4_behavioral.py  step_3_5_enrichment.py  synthetic.py  viirs_setup.py
src/features/: graph_builder.py
src/models/: __init__.py  stgat.py
src/train/: runner.py
src/utils/: __init__.py  config.py  geo.py
tests/: __init__.py  test_config.py  test_geo_utils.py  test_gfw_client.py  test_synthetic.py
(+49 files in other folders)
